--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main>
         <h2>latest Review</h2>
          <h3>interstellar</h3>
-        <img src="D:\coding\interstellar.jpg" alt="poster of Movie" height="500" width="1000">
+        <img src="images/interstellar.jpg" alt="poster of Movie" height="500" width="1000">
         <p>Interstellar is a 2014 epic science fiction drama film directed by Christopher Nolan, who co-wrote it with his brother Jonathan. It stars Matthew McConaughey, Anne Hathaway, Jessica Chastain, Bill Irwin, Ellen Burstyn, Michael Caine, and Matt Damon. Set in a dystopian future where Earth is suffering from catastrophic blight and famine, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humankind. The screenplay had its origins in a script Jonathan developed in 2007, and was originally set to be directed by Steven Spielberg. Theoretical physicist Kip Thorne was an executive producer and scientific consultant on the film, and wrote the tie-in book The Science of Interstellar. Cinematographer Hoyte van Hoytema shot it on 35 mm movie film in the Panavision anamorphic format and IMAX 70 mm. Filming began in late 2013 and took place in Alberta, Klaustur, and Los Angeles. Interstellar uses extensive practical and miniature effects, and the company DNEG created additional digital effects.Interstellar premiered in Los Angeles on October 26, 2014. In the United States, it was first released on film stock, expanding to venues using digital projectors. The film received positive reviews from critics and grossed over $681 million worldwide ($705 million after subsequent re-releases), making it the tenth-highest-grossing film of 2014. Thorne's computer-generated depiction of a black hole in the film has also received commendation from astronomers and physicists.Interstellar was nominated for five awards at the 87th Academy Awards, winning Best Visual Effects, and received numerous other accolades.</p>
-        <video src="D:\coding\2_5224550368070884480.mp4" t height="400" width="800" autoplay controls>
+        <video src="video/interstellar.mp4" t height="400" width="800" autoplay controls>
         </video>
         <a href="https://en.wikipedia.org/wiki/Interstellar_(film)">read full review </a>
         <h1>Top Rated Movies</h1>
